# ncnn-android-deeplabv3plus

./: README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: deeplabv3+.param
app/src/main/java/com/tencent/deeplabv3plusncnn/: DeepLabv3PlusNcnn.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  deeplabv3plusncnn_jni.cpp
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
